--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/styles": "latest",
     "gatsby": "latest",
+    "gatsby-cli": "^2.12.101",
     "gatsby-plugin-material-ui": "latest",
     "gatsby-plugin-react-helmet": "latest",
     "react": "latest",
